fixed design header, alignment, blog 6

--- a/mainstylesheet.css/Design.css
+++ b/mainstylesheet.css/Design.css
@@ -3,11 +3,16 @@ body {
     background: url('../images/background\ image.png') no-repeat center center fixed;
     background-size: cover;
     min-height: 100vh;
+    /*padding-top: 100px; /*pushes content below my navbar */
+}
+h1 {
+    margin-top: 100px;
+    /*text-align: left;*/
 }
   #design-content {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content:center;
     gap: 30px; /* space between image and text */
     flex-wrap: wrap; /* make it responsive */
     padding: 80px 20px;
@@ -26,3 +31,10 @@ body {
   }
  
 
+  .design-text {
+    max-width: 600px;
+    font-size: 18px;
+    color: #333;
+    line-height: 1.6;
+    text-align: left;
+  }
